ILM: inject a migrate step to migrate data between data tiers